[project]
name = "tf-embed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.6",
    "numpy==2.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "tensorflow>=2.20.0",
    "umap-learn>=0.5.9.post2",
]
